fix masthead spacing

--- a/web/app/themes/badegg/resources/views/blocks/masthead/style.scss
+++ b/web/app/themes/badegg/resources/views/blocks/masthead/style.scss
@@ -5,6 +5,7 @@
 .wp-block-badegg-masthead {
   container-name: BlockMasthead;
   container-type: inline-size;
+  margin: 1em 0;
 }
 
 .masthead {
